@@ -83,7 +83,7 @@ exports[`Deposits overview renders correctly 1`] = `
                 </p>
               </div>
               <div
-                aria-label="No change from April 18, 2019"
+                aria-label="No change from Previous Period:"
                 class="woocommerce-summary__item-delta"
                 role="presentation"
               >
@@ -127,7 +127,7 @@ exports[`Deposits overview renders correctly 1`] = `
                 </p>
               </div>
               <div
-                aria-label="No change from Est. Apr 22, 2019"
+                aria-label="No change from Previous Period:"
                 class="woocommerce-summary__item-delta"
                 role="presentation"
               >
@@ -168,7 +168,7 @@ exports[`Deposits overview renders correctly 1`] = `
                 </p>
               </div>
               <div
-                aria-label="No change from 2 deposits"
+                aria-label="No change from Previous Period:"
                 class="woocommerce-summary__item-delta"
                 role="presentation"
               >
@@ -209,7 +209,7 @@ exports[`Deposits overview renders correctly 1`] = `
                 </p>
               </div>
               <div
-                aria-label="No change from "
+                aria-label="No change from Previous Period:"
                 class="woocommerce-summary__item-delta"
                 role="presentation"
               >
@@ -429,7 +429,7 @@ exports[`Deposits overview renders on error correctly 1`] = `
                 </p>
               </div>
               <div
-                aria-label="No change from "
+                aria-label="No change from Previous Period:"
                 class="woocommerce-summary__item-delta"
                 role="presentation"
               >
