@@ -3,6 +3,7 @@
 = 2.4.0 - 2021-xx-xx =
 * Update - Improve the Connect Account page.
 * Update - Base UI components and their styling.
+* Fix - Deposits overview details not displayed.
 
 = 2.3.2 - 2021-04-27 =
 * Fix - Error when purchasing free trial subscriptions.
